[package]
name = "royal_road_archiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "royal_road_archiver_lib"
path = "src/library.rs"

[[bin]]
name = "royal_road_archiver_bin"
path = "src/binary.rs"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
url = "2.5.0"
