[package]
name = "royal_road_archiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "royal_road_archiver_lib"
path = "src/library.rs"

[[bin]]
name = "royal_road_archiver_bin"
path = "src/binary.rs"

[dependencies]
bytes = "1.5.0"
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive"] }
html2md = "0.2.14"
indicatif = "0.17.7"
path-slash = "0.2.1"
regex = "1.10.3"
reqwest = { version = "0.11.23", features = ["rustls", "blocking"] }
scraper = "0.18.1"
serde_json = "1.0.111"
url = "2.5.0"
