[package]
name = "royal_road_archiver"
version = "1.0.2"
edition = "2021"
description = "An archival program and library for the webnovel site RoyalRoad."
repository = "https://github.com/Raine-gay/royal_road_archiver"
license = "EUPL-1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'unwind'    # unwind on panic.
strip = true        # Strip symbols from binary. Gives significant space reductions

[lib]
name = "royal_road_archiver_lib"
path = "src/library.rs"

[[bin]]
name = "royal_road_archiver"
path = "src/binary.rs"

[dependencies]
bytes = "1.5.0"
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive"] }
epub-builder = "0.7.4"
html2md = "0.2.14"
indicatif = "0.17.7"
lazy_static = "1.4.0"
path-slash = "0.2.1"
regex = "1.10.3"
reqwest = { version = "0.11.23", features = ["blocking", "rustls"] }
scraper = "0.18.1"
serde_json = "1.0.111"
tempdir = "0.3.7"
thiserror = "1.0.56"
url = "2.5.0"
zip-extract = "0.1.3"
